Build 1.14 - no minify, all servers

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "scripts": {
         "start": "vite",
-        "build": "vite build"
+        "build": "vite build --no-minify"
     },
     "dependencies": {
         "react": "^17.0.2",
